--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "loxjs",
+  "name": "@chidiwilliams/loxjs",
   "version": "1.0.0",
   "description": "Lox interpreter",
-  "main": "dist/runner.js",
-  "types": "dist/runner.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/**/*"
   ],
   "scripts": {
     "build": "tsc",
-    "test": "tap --ts",
+    "test": "tap --ts src/**.test.ts",
     "prepare": "npm run build",
     "postversion": "git push && git push --tags"
   },
